# postbridge

./: .env.example  .gitignore  Makefile  README.md  config.yaml  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: changelog.yml  ci.yml  release.yml
docs/: README.ru.md
src/: app.py  cleaner.py  config.py  downloader.py  dto.py  exceptions.py  main.py  state_manager.py  telegram_client.py  vk_client.py
src/managers/: telegram_client_manager.py  vk_client_manager.py  ytdlp_manager.py
tests/: test_cleaner.py
