[project]
name = "vk-to-tg"
version = "0.1.0"
dependencies = [
    "vk-api",
    "python-dotenv",
    "yt-dlp",
    "browser-cookie3",
    "python-telegram-bot[ext]>=22.3",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]
