[project]
name = "vk-to-tg"
version = "0.1.0"
requires-python = ">=3.12,<3.14"

dependencies = [
    "ruff",
    "vk-api",
    "python-dotenv",
    "yt-dlp",
    "telethon",
    "tgcrypto>=1.2.5",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]
