[project]
name = "vk-to-tg"
version = "0.1.0"
requires-python = ">=3.13,<3.14"

dependencies = [
    "vk-api",
    "python-dotenv",
    "yt-dlp",
    "emoji",
    
    "tgcrypto>=1.2.5",
    "kurigram>=2.2.9",
    "PyYAML>=6.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[dependency-groups]
dev = [
    "ruff>=0.12.11",
    "pytest",
]
